--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
+            <version>2.00</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
